bat.bool1.in1020.In1020.scala.error
Compilation error:
In1020:2: error: Boolean.type does not take parameters
  if (Boolean(b < 10)) {
             ^In1020:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if (Boolean(b < 10)) {
  ^