bat.bool1.in1020.In1020.scala.code
def in1020(a:Int, b:Int):Boolean = {
  if (Boolean(b < 10)) {
    return false
  }
}